; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/unity/extr_unity.c_UnityAssertBits.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/unity/extr_unity.c_UnityAssertBits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UNITY_SKIP_EXECUTION = common dso_local global i32 0, align 4
@UnityStrExpected = common dso_local global i32 0, align 4
@UnityStrWas = common dso_local global i32 0, align 4
@UNITY_FAIL_AND_BAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UnityAssertBits(i32 %0, i32 %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* @UNITY_SKIP_EXECUTION, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = and i32 %12, %13
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %8, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %14, %17
  br i1 %18, label %19, label %35

19:                                               ; preds = %5
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @UnityTestResultsFailBegin(i32 %20)
  %22 = load i32, i32* @UnityStrExpected, align 4
  %23 = call i32 @UnityPrint(i32 %22)
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @UnityPrintMask(i32 %24, i32 %25)
  %27 = load i32, i32* @UnityStrWas, align 4
  %28 = call i32 @UnityPrint(i32 %27)
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @UnityPrintMask(i32 %29, i32 %30)
  %32 = load i8*, i8** %9, align 8
  %33 = call i32 @UnityAddMsgIfSpecified(i8* %32)
  %34 = load i32, i32* @UNITY_FAIL_AND_BAIL, align 4
  br label %35

35:                                               ; preds = %19, %5
  ret void
}

declare dso_local i32 @UnityTestResultsFailBegin(i32) #1

declare dso_local i32 @UnityPrint(i32) #1

declare dso_local i32 @UnityPrintMask(i32, i32) #1

declare dso_local i32 @UnityAddMsgIfSpecified(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
